--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ input[type="text"] {
     color: #406882;
 }
 .points .training p {
+    font-size: 13px;
     margin: 16px 0 40px;
 }
 
@@ -120,9 +121,12 @@ input[type="text"] {
     display: flex;
     align-items: center;
 }
+.output .remove .label-wrap i {
+    margin-right: 8px;
+    font-size: 24px;
+}
 .output .remove label {
     font-size: 16px;
-    color: #F05454;
 }
 
 .output .remove #input-remove {
