--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ input[type="text"] {
     min-width: 200px;
     display: block;
     border: none;
-    background: #1A374D;
+    background: #406882;
     color: #fff;
     padding: 14px 16px;
     font-size: 16px;
@@ -189,7 +189,6 @@ input[type="text"] {
 
 .intro .intro-wrap {
     background: #F0ECE3;
-    /* height: 350px; */
     border-radius: 6px;
 }
 
@@ -211,6 +210,8 @@ input[type="text"] {
 .intro .intro-wrap  .img-wrap {
     width: 100%;
     height: 350px;
+    /* background-color: #406882; */
+    padding: 16px;
 }
 
 .intro .intro-wrap  .img-wrap img {
