fix input option

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,26 @@ input[type="text"] {
     padding: 12px 16px;
     font-size: 16px;
 }
+input[type="number"] {
+    width: 100%;
+    border: none;
+    padding: 12px 16px;
+    font-size: 16px;
+}
+select {
+    width: 100%;
+    padding: 12px 16px;
+    font-size: 16px;
+    border: none;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+option {
+    border: none;
+}
 
 
 /* ----------------- Button --------------- */
