--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,9 +29,9 @@ select {
     font-size: 16px;
     border: none;
 
-    /* -webkit-appearance: none;
+    -webkit-appearance: none;
     -moz-appearance: none;
-    appearance: none; */
+    appearance: none;
 }
 
 option {
