--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,6 +271,7 @@ select {
     position: absolute;
     top: 50%;
     left: 50%;
+    min-width: 360px;
     transform: translate(-50%, -50%);
     padding: 24px;
     border-radius: 5px;
