--- a/Du_doan/assets/css/style.css
+++ b/Du_doan/assets/css/style.css
@@ -127,6 +127,10 @@ input[type="number"] {
     .target-wrap .sticker-container {
         border: none;
     }
+
+    .target-wrap .target-row .label-container {
+        min-height: 39px;
+    }
 }
 
 /* tablet & Mobile */
