--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,7 @@ select {
 
 /*-------- Remove section -------*/
 .output .remove {
-    margin-top: 16px;
+    margin-top: 36px;
 }
 
 .output .remove .label-wrap {
@@ -381,10 +381,10 @@ select {
         text-align: center;
     }
 
-    .output .remove {
-        margin: 0;
+   /*  .output .remove {
+        margin-top: 36px;
     }
-
+ */
     .intro .intro-wrap .text-wrap {
         padding: 16px;
         text-align: center;
@@ -410,7 +410,7 @@ select {
 
 
     .output .remove .reset-wrap {
-        margin-top: 60px;
+        margin-top: 24px;
         justify-content: center;
     }
     
