--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,18 +6,23 @@
 }
 
 :root {
-    --dark_blue: #1D2537;
-    --medium-blue: #242b42;
+    --dark_blue: #1D2536;
+    --medium-blue: #303855;
     --light_blue: #7F89B0;
-    --dark_pink: #BDACB8;
+    --dark_pink: #C9AFC5;
     --dark_green: #849A6B;
     --brown: #6E4C3B;
-    --purple: #8B5CFB;
+    --purple: #5D5CF9;
 }
 
 html {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--dark_blue);
+}
+
+body {
+    width: 100%;
+    overflow: hidden;
 }
 
 /* width */
