--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--dark_blue);
+    scroll-behavior: smooth; /*Trình duyệt cuộn mượt hơn*/
 }
 
 body {
@@ -353,15 +354,18 @@ select {
 }
 
 /* ========== Slider ============ */
-.slider {
+/* .slider {
     background: var(--medium-blue);
-}
+} */
 
 .slider .slider-wrap {
     height: 200px;
+    padding: 0 16px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background: var(--medium-blue);
+    border-radius: 0 0 10px 10px;
 }
 
 .slider .slider-wrap h1 {
@@ -373,22 +377,27 @@ select {
 /* ========== Intro ============ */
 .intro {
     margin-bottom: 50px;
-    background: var(--medium-blue);
+    /* background: var(--medium-blue); */
     /* box-shadow: 0 0 10px #ddd; */
 }
 
 .intro .intro-wrap {
-    
+    background: var(--medium-blue);
+    border-radius: 10px;
 }
 
 .intro .intro-wrap .text-wrap {
-
+    padding: 0 16px;
 }
 
 .intro .intro-wrap .text-wrap p, h3 {
     margin-top: 16px;
     line-height: 1.6;
     color: var(--light_blue);
+}
+
+.intro .intro-wrap .text-wrap p {
+    font-size: 13px;
 }
 
 .intro .intro-wrap .text-wrap h3 {
@@ -424,18 +433,19 @@ select {
 
 @media (max-width: 739px) {
     .slider .slider-wrap {
-        margin: 0 24px;
         text-align: center;
+        border-radius: unset;
     }
 
-   /*  .output .remove {
-        margin-top: 36px;
-    }
- */
+
     .intro .intro-wrap .text-wrap {
         padding: 16px;
         text-align: center;
     
+    }
+
+    .intro .intro-wrap {
+        padding-bottom: 24px;
     }
 
 
@@ -480,6 +490,10 @@ select {
 
     .output .display {
         display: block;
+    }
+
+    .intro .intro-wrap {
+        border-radius: unset;
     }
 
 
