--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,7 @@ select {
     color: var(--light_blue);
     text-align: center;
     margin: 0;
+    font-size: 13px;
 }
 
 .table .tr {
@@ -438,6 +439,9 @@ select {
     }
 
 
+    .intro .intro-wrap {
+        border-radius: unset;
+    }
     .intro .intro-wrap .text-wrap {
         padding: 16px;
         text-align: center;
@@ -492,9 +496,6 @@ select {
         display: block;
     }
 
-    .intro .intro-wrap {
-        border-radius: unset;
-    }
 
 
     .confirm-remove .confirm-wrap .btn-wrap .cf-btn {
