--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,10 +106,12 @@ body {
  */
 .tr:hover p {
     color: var(--purple);
+    transition: .3s ease;
 }
 
 .tr:hover .td {
     border: 1px solid var(--purple);
+    transition: .3s ease;
 }
 
 .th {
@@ -135,7 +137,7 @@ body {
 
 input[type="text"] {
     width: 100%;
-    border: 1px solid var(--purple);
+    border: 2px solid var(--purple);
     border-radius: 5px;
     padding: 12px 16px;
     font-size: 16px;
@@ -144,7 +146,7 @@ input[type="text"] {
 }
 input[type="number"] {
     width: 100%;
-    border: 1px solid var(--purple);
+    border: 2px solid var(--purple);
     border-radius: 5px;
     padding: 12px 16px;
     font-size: 16px;
@@ -156,6 +158,27 @@ input[type="number"] {
     -moz-appearance: textfield;
 }
 
+input[type="text"]:focus {
+    outline-color: var(--purple);
+}
+
+input[type="number"]:focus {
+    outline-color: var(--purple);
+}
+
+/* Thay đổi màu autocomplete của input
+mặc định là trắng */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px var(--medium-blue) inset;
+}
+/* Thay đổi màu chữ autocomplete*/
+input:-webkit-autofill{
+    -webkit-text-fill-color: var(--light_blue);
+}
+
 /* Loại bỏ nút mũi tên ô input: number
     Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -164,13 +187,15 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+
+
 select {
     width: 100%;
     padding: 12px 16px;
     margin-top: 4px;
     font-size: 16px;
     color: var(--light_blue);
-    border: 1px solid var(--purple);
+    border: 2px solid var(--purple);
     border-radius: 5px;
     cursor: pointer;
 
@@ -183,6 +208,9 @@ select {
     -webkit-appearance: none;
     -moz-appearance: none;
 }
+select:focus {
+    outline-color: var(--purple);
+}
 
 .points {
     margin: 30px 0;
@@ -192,6 +220,10 @@ select {
     background-color: var(--medium-blue);
     padding: 50px 16px;
     border-radius: 8px;
+}
+
+.input-wraper .training {
+    opacity: 0.5;
 }
 
 .input-wraper .training h4, p {
@@ -285,10 +317,9 @@ select {
 }
 
 .output .remove #input-remove {
-    border: 1px solid var(--purple);
     width: 100%;
     border-radius: 5px 0 0 5px;
-    padding: 13px 16px;
+    padding: 12px 16px;
 }
 
 .output .remove #remove-btn {
