--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,10 +64,12 @@ body {
     cursor: pointer;
     text-decoration: none;
     text-align: center;
+    transition: .1s ease;
 }
 
 .button:hover {
     opacity: 0.8;
+    transform: scale(1.03);
     transition: .3s;
 }
 
@@ -132,6 +134,8 @@ body {
     text-align: center;
 }
 
+/* ------------- Nav bar  ------------- */
+
 
 /* -------------   ------------- */
 
@@ -143,6 +147,7 @@ input[type="text"] {
     font-size: 16px;
     background-color: var(--medium-blue);
     color: var(--light_blue);
+    transition: .1s ease;
 }
 input[type="number"] {
     width: 100%;
@@ -152,10 +157,16 @@ input[type="number"] {
     font-size: 16px;
     background-color: var(--medium-blue);
     color: var(--light_blue);
+    transition: .1s ease;
 
     /*Loại bỏ nút mũi tên input: number
      cho trình duyệt firefox*/
     -moz-appearance: textfield;
+}
+
+input:hover {
+    transform: scale(1.03);
+    transition: .3s ease;
 }
 
 input[type="text"]:focus {
@@ -198,6 +209,7 @@ select {
     border: 2px solid var(--purple);
     border-radius: 5px;
     cursor: pointer;
+    transition: .1s ease;
 
     background: url('../img/drop-down-black.png') no-repeat;
     background-color: var(--medium-blue);
@@ -210,6 +222,10 @@ select {
 }
 select:focus {
     outline-color: var(--purple);
+}
+select:hover {
+    transform: scale(1.03);
+    transition: .3s ease;
 }
 
 .points {
