--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,9 +135,89 @@ body {
 }
 
 /* ------------- Nav bar  ------------- */
+#navbar {
+    
+}
 
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    background-color: var(--medium-blue);
+    transition: .3s ease;
+}
 
-/* -------------   ------------- */
+.sticky + .points {
+    margin-top: 120px;
+}
+
+#navbar .navbar-wrap {
+    display: flex;
+    background-color: var(--medium-blue);
+    border-radius: 6px;
+    padding: 8px;
+    align-items: center;
+}
+
+#navbar .logo-container img {
+    height: 100%;
+}
+
+#navbar .nav-menu {
+    margin-left: 24px;
+}
+
+#navbar .nav-menu ul {
+    display: flex;
+    list-style: none;
+}
+
+#navbar .nav-menu ul li a {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 13px;
+    color: var(--dark_pink);
+    padding: 12px 12px;
+    display: inline-block;
+}
+
+#navbar .nav-menu ul li {
+    border-radius: 5px;
+    transition: .3s ease;
+}
+
+#navbar .nav-menu ul li:hover {
+    background-color: var(--purple);
+    border-radius: 5px;
+    transform: scale(1.03);
+    transition: .4s ease;
+}
+#navbar .nav-menu ul li:hover a {
+    color: white;
+    transition: .4s ease;
+}
+
+#navbar .dark-mode-wrap {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 16px;
+    cursor: pointer;
+}
+
+#navbar .dark-mode-wrap p {
+    font-size: 13px;
+    padding-right: 8px;
+}
+
+#navbar .dark-mode-wrap i {
+    font-size: 24px;
+    color: var(--dark_pink);
+}
+
+/* ------------- Input  ------------- */
 
 input[type="text"] {
     width: 100%;
@@ -428,6 +508,10 @@ select:hover {
 
 /* ========== Slider ============ */
 
+.slider {
+    margin-bottom: 30px;
+}
+
 .slider .slider-wrap {
     height: 200px;
     padding: 0 16px;
@@ -491,7 +575,7 @@ select:hover {
 
 /* ========== footer ============ */
 
-.footer {
+#footer {
     padding: 0 0 40px;
     text-align: center;
 }
