--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,31 +141,47 @@ body {
     -ms-user-select: none;      /* IE 10+ */
     user-select: none;
     transition: .3s ease;
+
+    display: flex;
+    background-color: var(--card_color);
+    border-radius: 6px;
+    padding: 8px;
+    align-items: center;
+    width: 1200px;
+
+    /* position: relative; */
+    left: 50%;
+    transform: translateX(-50%);
+    transition: background-color .6s ease;
+    transition: .3s ease;
 }
 
 .sticky {
-    position: fixed;
+    /* position: fixed; */
     top: 0;
-    left: 0;
-    right: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100% !important;
+    transition: .3s ease;
     z-index: 1;
     background-color: var(--card_color);
-    transition: .3s ease;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+
 }
+
 
 .sticky + .points {
     margin-top: 120px;
 }
 
-#navbar .navbar-wrap {
+/* #navbar .navbar-wrap {
     display: flex;
     background-color: var(--card_color);
     transition: background-color .6s ease;
     border-radius: 6px;
     padding: 8px;
     align-items: center;
-}
+} */
 
 #navbar .logo-container img {
     height: 100%;
@@ -599,6 +615,11 @@ select:hover {
 
 
 @media (max-width: 739px) {
+    #navbar {
+        width: 100%;
+    }
+
+
     .slider .slider-wrap {
         text-align: center;
         border-radius: unset;
@@ -679,11 +700,20 @@ select:hover {
     }
 }
 
-/* Tablet */
+
+/* Tablet - PC low resolution */
 @media (min-width: 740px) and (max-width: 1023px) {
-    
+    #navbar {
+        width: 644px;
+    }
 }
 
+/* > PC low resolution */
+@media (min-width: 1024px) and (max-width: 1239px) {
+    #navbar {
+        width: 984px;
+    }
+}
 
 /* PC */
 @media (min-width: 1024px) {
