--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,8 +21,12 @@ html {
 }
 
 body {
-    width: 100%;
-    overflow-x: hidden;
+
+    /* Ngăn không cho bôi đen */
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;
 }
 
 /*----- Custom scroll bar -----*/
@@ -135,12 +139,6 @@ body {
 
 /* ------------- Nav bar  ------------- */
 #navbar {
-    /* Ngăn không cho bôi đen */
-    -webkit-user-select: none;  /* Chrome all / Safari all */
-    -moz-user-select: none;     /* Firefox all */
-    -ms-user-select: none;      /* IE 10+ */
-    user-select: none;
-    transition: .3s ease;
 
     display: flex;
     background-color: var(--card_color);
@@ -152,7 +150,6 @@ body {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    transition: background-color .6s ease;
     transition: .3s ease;
 }
 
@@ -228,6 +225,11 @@ body {
     margin-right: 16px;
     cursor: pointer;
 }
+#navbar .dark-mode-wrap:hover p,
+#navbar .dark-mode-wrap:hover i {
+    color: var(--purple);
+    transition: .3s ease;
+}
 
 #navbar .dark-mode-wrap p {
     font-size: 13px;
@@ -244,6 +246,13 @@ body {
 /* #navbar .dark-mode-wrap:hover i {
     transition: 1s ease;
 } */
+#navbar .sub-menu-icon {
+    display: none;
+}
+#navbar .sub-menu-icon i {
+    font-size: 24px;
+    color: var(--icon-color);
+}
 
 /* ------------- Input  ------------- */
 
@@ -608,15 +617,77 @@ select:hover {
 /* ========== footer ============ */
 
 #footer {
-    padding: 0 0 40px;
-    text-align: center;
+    /* padding: 0 0 40px; */
+    display: flex;
+    margin-bottom: 40px;
+    justify-content: center;
 }
 
+#footer .footer-wrap {
+    padding: 8px;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1D2536;
+}
 
+#footer .footer-wrap p {
+    color: #7F89B0;
+}
+
+#footer .brand-logo {
+    margin-left: 8px;
+    display: flex;
+    align-items: center;
+
+}
+
+#footer .brand-logo a {
+    display: inline-block;
+    padding: 4px;
+    margin: 0 4px;
+}
+
+#footer .brand-logo img {
+    width: 24px;
+}
+
+/* .facebook
+.github */
+
+/* =============== Media query ================ */
 
 @media (max-width: 739px) {
+
     #navbar {
         width: 100%;
+        justify-content: space-between;
+    }
+
+    #navbar .nav-menu {
+        display: none;
+    }
+
+    #navbar .dark-mode-wrap {
+        margin: 0;
+    }
+
+    #navbar .dark-mode-wrap p {
+        display: none;
+    }
+
+    #navbar .dark-mode-wrap i {
+        padding: 8px 18px;
+    }
+
+    #navbar .sub-menu-icon {
+        display: block;
+    }
+
+    #navbar .sub-menu-icon i {
+        padding: 8px 18px;
+        cursor: pointer;
     }
 
 
@@ -651,6 +722,14 @@ select:hover {
 
 /* tablet & Mobile */
 @media (max-width: 1023px) {
+    .slider {
+        margin-bottom: 16px;
+    }
+
+    .sticky + .points {
+        margin-top: 92px;
+    }
+
     .button#submit {
         width: 100%;
     
