--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,59 +1,6 @@
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-:root {
-    --bg-color: #1D2536;
-    --card_color: #303855;
-    --text_color: #7F89B0;
-    --icon-color: #C9AFC5;
-    --purple: #5D5CF9;
-}
-
-html {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: var(--bg-color);
-    transition: background-color .6s ease;
-    scroll-behavior: smooth; /*Trình duyệt cuộn mượt hơn*/
-}
-
-body {
-
-    /* Ngăn không cho bôi đen */
-    -webkit-user-select: none;  /* Chrome all / Safari all */
-    -moz-user-select: none;     /* Firefox all */
-    -ms-user-select: none;      /* IE 10+ */
-    user-select: none;
-}
-
-/*----- Custom scroll bar -----*/
-/* width */
-::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: var(--purple); 
-    
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: var(--text_color); 
-    border-radius: 3px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
-
-/* ----------------- Button --------------- */
+/* ==============---- Button ==============-- */
 .button {
     min-width: 150px;
     display: block;
@@ -78,7 +25,7 @@ body {
 
 
 
-/* ------------------ Table ---------------- */
+/* ==============----- Table ==============--- */
 .table {
     margin-top: 16px;
     width: 100%;
@@ -137,124 +84,8 @@ body {
     text-align: center;
 }
 
-/* ------------- Nav bar  ------------- */
-#navbar {
 
-    display: flex;
-    background-color: var(--card_color);
-    border-radius: 6px;
-    padding: 8px;
-    align-items: center;
-    width: 1200px;
-
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: .3s ease;
-}
-
-.sticky {
-    /* position: fixed; */
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100% !important;
-    transition: .3s ease;
-    z-index: 1;
-    background-color: var(--card_color);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-
-}
-
-
-.sticky + .points {
-    margin-top: 120px;
-}
-
-/* #navbar .navbar-wrap {
-    display: flex;
-    background-color: var(--card_color);
-    transition: background-color .6s ease;
-    border-radius: 6px;
-    padding: 8px;
-    align-items: center;
-} */
-
-#navbar .logo-container img {
-    height: 100%;
-}
-
-#navbar .nav-menu {
-    margin-left: 24px;
-}
-
-#navbar .nav-menu ul {
-    display: flex;
-    list-style: none;
-}
-
-#navbar .nav-menu ul li a {
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 13px;
-    color: var(--icon-color);
-    padding: 12px 12px;
-    display: inline-block;
-}
-
-#navbar .nav-menu ul li {
-    border-radius: 5px;
-    transition: .3s ease;
-}
-
-#navbar .nav-menu ul li:hover {
-    background-color: var(--purple);
-    border-radius: 5px;
-    transform: scale(1.03);
-    transition: .4s ease;
-}
-#navbar .nav-menu ul li:hover a {
-    color: white;
-    transition: .4s ease;
-}
-
-#navbar .dark-mode-wrap {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-    margin-right: 16px;
-    cursor: pointer;
-}
-#navbar .dark-mode-wrap:hover p,
-#navbar .dark-mode-wrap:hover i {
-    color: var(--purple);
-    transition: .3s ease;
-}
-
-#navbar .dark-mode-wrap p {
-    font-size: 13px;
-    padding-right: 8px;
-}
-
-#navbar .dark-mode-wrap i {
-    font-size: 24px;
-    color: var(--icon-color);
-    transform: rotate(180deg);
-    transition: 1s ease;
-}
-
-/* #navbar .dark-mode-wrap:hover i {
-    transition: 1s ease;
-} */
-#navbar .sub-menu-icon {
-    display: none;
-}
-#navbar .sub-menu-icon i {
-    font-size: 24px;
-    color: var(--icon-color);
-}
-
-/* ------------- Input  ------------- */
+/* ============== Input  ============== */
 
 input[type="text"] {
     width: 100%;
@@ -479,7 +310,7 @@ select:hover {
     font-size: 16px;
 }
 
-/* -------------- Confirm remove ---------- */
+/* ==============- Confirm remove ---------- */
 .remove .confirm-remove {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.4);
@@ -614,82 +445,9 @@ select:hover {
 }
 
 
-/* ========== footer ============ */
-
-#footer {
-    /* padding: 0 0 40px; */
-    display: flex;
-    margin-bottom: 40px;
-    justify-content: center;
-}
-
-#footer .footer-wrap {
-    padding: 8px;
-    border-radius: 6px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #1D2536;
-}
-
-#footer .footer-wrap p {
-    color: #7F89B0;
-}
-
-#footer .brand-logo {
-    margin-left: 8px;
-    display: flex;
-    align-items: center;
-
-}
-
-#footer .brand-logo a {
-    display: inline-block;
-    padding: 4px;
-    margin: 0 4px;
-}
-
-#footer .brand-logo img {
-    width: 24px;
-}
-
-/* .facebook
-.github */
-
 /* =============== Media query ================ */
 
 @media (max-width: 739px) {
-
-    #navbar {
-        width: 100%;
-        justify-content: space-between;
-    }
-
-    #navbar .nav-menu {
-        display: none;
-    }
-
-    #navbar .dark-mode-wrap {
-        margin: 0;
-    }
-
-    #navbar .dark-mode-wrap p {
-        display: none;
-    }
-
-    #navbar .dark-mode-wrap i {
-        padding: 8px 18px;
-    }
-
-    #navbar .sub-menu-icon {
-        display: block;
-    }
-
-    #navbar .sub-menu-icon i {
-        padding: 8px 18px;
-        cursor: pointer;
-    }
-
 
     .slider .slider-wrap {
         text-align: center;
@@ -726,9 +484,6 @@ select:hover {
         margin-bottom: 16px;
     }
 
-    .sticky + .points {
-        margin-top: 92px;
-    }
 
     .button#submit {
         width: 100%;
@@ -782,16 +537,12 @@ select:hover {
 
 /* Tablet - PC low resolution */
 @media (min-width: 740px) and (max-width: 1023px) {
-    #navbar {
-        width: 644px;
-    }
+    
 }
 
 /* > PC low resolution */
 @media (min-width: 1024px) and (max-width: 1239px) {
-    #navbar {
-        width: 984px;
-    }
+ 
 }
 
 /* PC */
